# sokoban-maths

./: .clang-format  .gitignore  CMakeLists.txt  README.md  imgui.ini  run
include/: background.h  commands.h  components.h  constants.h  events.h  game.h  level.h  maid.h  types.h  utils.h
include/commponents/: components.h
include/entities/: prefabs.h
include/input/: commands.h  input-handler.h
include/managers/: command-manager.h  input-manager.h  level-manager.h  maid.h  texture-manager.h
include/systems/: event-system.h  move-system.h  operator-system.h  render-system.h  win-condition-system.h
levels/: level-test.json  level1.txt
src/: background.cpp  commands.cpp  game.cpp  level.cpp  maid.cpp  main.cpp  utils.cpp
src/entities/: prefabs.cpp
src/input/: commands.cpp  input-handler.cpp
src/managers/: command-manager.cpp  input-manager.cpp  level-manager.cpp  maid.cpp  texture-manager.cpp
src/systems/: event-system.cpp  move-system.cpp  render-system.cpp
